# applicationlauncher

./: Cargo.toml  README.md
kwin/applicationlauncher-window-feed/: metadata.json
kwin/applicationlauncher-window-feed/contents/code/: main.js
src/: atspi_location_probe.py  main.rs
