[package]
name = "applicationlauncher"
version = "0.0.8"
edition = "2024"

[dependencies]
eframe = "0.33.0"
egui_extras = { version = "0.33.0", features = ["all_loaders"] }
image = { version = "0.25.5", features = ["png", "jpeg"] }
freedesktop-icons = "0.4.0"
fuzzy-matcher = "0.3.7"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zbus = "5.16.0"
